policy/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sSignedImages
metadata:
  name: signed-image
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
