policy/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8ssignedimages
spec:
  crd:
    spec:
      names:
        kind: K8sSignedImages
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8ssignedimages

        violation[{"msg": msg}] {
          images := [img | img = input.review.object.spec.template.spec.containers[_].image]
          response := external_data({"provider": "cosign-provider", "keys": images})
          result := response.responses[_]
          result[1] == false
          msg := sprintf("Image %v does not contain a valid cosign signature", [result[0]])
        }
